# awt

./: CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
awt-config/: Cargo.toml  README.md
awt-config/src/: attribute.rs  client.rs  server.rs
awt-metrics/: Cargo.toml  README.md
awt-metrics/src/: aggregator.rs  lib.rs  target.rs  value.rs
awt-simulation/: Cargo.toml  README.md
awt-simulation/src/: attribute.rs  config.rs  error.rs  lib.rs  metric.rs  statistics.rs
awt-simulation/src/client/: mod.rs
awt-simulation/src/request/: data.rs  mod.rs  queue.rs
awt-simulation/src/routing/: mod.rs  request_data.rs  server_data.rs
awt-simulation/src/server/: mod.rs  queue.rs
docs/: design_notes.md
examples/: config.toml  simple.toml
min-queue/: Cargo.toml  README.md
min-queue/src/: lib.rs
src/: action.rs  args.rs  attribute.rs  client.rs  client_profile.rs  contact.rs  main.rs  metric.rs  min_queue.rs  server.rs  simulation.rs
src/config/: attribute.rs  client.rs  client_profile.rs  metric.rs  mod.rs  parsed.rs  server.rs
src/contact_center/: agent.rs  mod.rs  skill.rs
src/simulation/: action.rs  attribute.rs  client.rs  client_profile.rs  contact.rs  error.rs  mod.rs  request.rs  routing.rs  server.rs  statistics.rs
src/simulation/request/: mod.rs  queue.rs
src/simulation/routing/: mod.rs  request_data.rs  server_data.rs
src/simulation/server/: mod.rs  queue.rs
