[package]
name = "awt"
version = "0.1.0"
categories = ["games", "simulation"]
edition = "2021"
keywords = ["awt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/b-n/awt"
description = "A simulation engine which can emulate a client/server with multiple requests."
homepage = "https://github.com/b-n/awt"
documentation = "https://docs.rs/awt"
exclude = [
  "/.github",
  "/docs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ['derive'] }
exitcode = "1.1"
log = "0.4"
rand = { version = "0.8.5", features = ['small_rng'] }
rayon = "1.7"
serde = { version = "1.0", features = ['derive'] }
simple_logger = "4.1.0"
thiserror = "1.0"
toml = "0.4"
