[package]
name = "awt"
version = "0.1.0"
categories = ["games", "simulation"]
keywords = ["awt"]
description = "A simulation engine which can emulate a client/server with multiple requests."
documentation = "https://docs.rs/awt"
exclude = [
  "/.github",
  "/docs"
]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[workspace]
members = [
  "awt-simulation",
  "awt-metrics",
  "awt-config",
]

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/b-n/awt"
repository = "https://github.com/b-n/awt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ['derive'] }
exitcode = "1.1"
log = "0.4"
rayon = "1.7"
simple_logger = "4.2.0"
awt-simulation = { version = "0.1", path = "awt-simulation" }
awt-metrics = { version = "0.1", path = "awt-metrics" }
awt-config = { version = "0.1", path = "awt-config" }
