[package]
name = "awt-simulation"
version = "0.1.0"
description = "A simulation engine for Clients, Requests, and Servers"
categories = ["simulation"]
keywords = ["awt", "simulation"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ['derive'], optional = true }
min-queue = { version = "0.1", path = "../min-queue"}
rand = "0.8"
thiserror = "1.0"
