[package]
name = "awt-simulation"
version = "0.1.0"
description = "A simulation engine for Clients, Requests, and Servers"
categories = ["simulation"]
keywords = ["awt", "simulation"]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ['derive'], optional = true }
rand = { version = "0.8", features = ['small_rng'] }
thiserror = "1.0"
binary-heap-plus = "0.5"
