[package]
name = "awt-simulation"
version = "0.1.0"
description = "A simulation engine for Clients, Requests, and Servers"
categories = ["simulation"]
keywords = ["awt", "simulation"]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
# RngCore trait
rand = "0.8"
# Syntactic sugar to make a reverse heap
binary-heap-plus = "0.5"
# no_std compliant HashMap (also used by rust std)
hashbrown = "0.13"
